# oraclaw

./: .env.example  .gitignore  README.md  docker-compose.yml  pnpm-lock.yaml  pyproject.toml
extensions/oracle-storage/: client.test.ts  client.ts  config.test.ts  config.ts  index.test.ts  index.ts  openclaw.plugin.json  package.json  session-provider.ts  transcript-provider.ts
oci-genai/: README.md  proxy.py
oraclaw-service/: Dockerfile  pyproject.toml
oraclaw-service/oraclaw_service/: config.py  main.py
oraclaw-service/oraclaw_service/api/: health.py  init.py  memory.py  migration.py  router.py  sessions.py  transcripts.py
oraclaw-service/oraclaw_service/db/: __init__.py  connection.py  lob.py  schema.py
oraclaw-service/oraclaw_service/migration/: __init__.py  sessions_to_oracle.py  sqlite_to_oracle.py  transcripts_to_oracle.py
oraclaw-service/oraclaw_service/models/: __init__.py  memory.py  sessions.py  transcripts.py
oraclaw-service/oraclaw_service/services/: __init__.py  embedding_service.py  memory_service.py  session_service.py  transcript_service.py
oraclaw-service/scripts/: integration_test.py  oracle_monitor.py  setup-db.sh
oraclaw-service/tests/: conftest.py  test_auth.py  test_config.py  test_health.py  test_init.py  test_memory.py  test_memory_edge_cases.py  test_migration.py  test_schema.py  test_sessions.py  test_transcripts.py  test_vector_utils.py
src/config/: types.memory.ts
src/discord/monitor/: feedback-controller.ts
src/memory/: backend-config.ts  types.ts
