[project]
name = "oraclaw-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "oracledb>=2.5.0",
  "langchain-oracledb>=0.2.0",
  "langchain-community>=0.3.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
